1. Finally working example with Rails with Micro Services 2. Following issues still exist 	a. Unauthorized error when application loads. Hard coded user authentication token in RailsappSwaggerClient class at line 95. Fix this in 		future versions. 	b. require file paths are hard coded. Find correct to solution to load all the files/folder when application loads.

--- a/railsapp/Gemfile
+++ b/railsapp/Gemfile
@@ -1,4 +1,5 @@
 source 'https://rubygems.org'
+ruby '2.3.4'
 
 git_source(:github) do |repo_name|
   repo_name = "#{repo_name}/#{repo_name}" unless repo_name.include?("/")
@@ -10,12 +11,10 @@ end
 gem 'rails', '~> 5.1.4'
 # Use sqlite3 as the database for Active Record
 
-gem 'json', '~> 1.8.3'
-
-gem 'swagger_client', '~> 1.0.0'
-
 # Use mysql as the database for Active Record
 gem 'mysql2', '>= 0.3.18', '< 0.5'
+
+
 
 # Use Puma as the app server
 gem 'puma', '~> 3.7'
@@ -36,10 +35,22 @@ gem 'jbuilder', '~> 2.5'
 # gem 'redis', '~> 3.0'
 # Use ActiveModel has_secure_password
 # gem 'bcrypt', '~> 3.1.7'
+
+
+#Custom gems
 gem 'activeresource', require: 'active_resource'
+
+gem 'swagger_client', '~> 1.0.0'
+
+gem 'json', '~> 1.8.3'
+
+#gem "swagger_client", path: "/swagger/"
+
+
+
 # Use Capistrano for deployment
 # gem 'capistrano-rails', group: :development
-
+gem 'pry'
 
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
