--- a/railsapp/config/database.yml
+++ b/railsapp/config/database.yml
@@ -13,11 +13,13 @@ default: &default
   adapter: mysql2
   encoding: utf8
   host: rails-mysql
+  #host: localhost
   pool: 5
 
 development:
   <<: *default
   username: root
+  #password: jadda007
   database: railsapp_development
 
 # Warning: The database defined as "test" will be erased and
@@ -27,8 +29,8 @@ test:
   <<: *default
   username: root
   database: mysql_postit_test
-  #password: testtest123
-  socket: /cloudsql/post-it-172215:us-east1:qa-postit
+  #password: jadda007
+  #socket: /cloudsql/post-it-172215:us-east1:qa-postit
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
