Following bugs fixed
1. Bundler could not find compatible versions for gem "json": swagger_client depends on json (>= 2.1.0, ~> 2.1)

--- a/railsapp/Gemfile
+++ b/railsapp/Gemfile
@@ -41,15 +41,19 @@ gem 'rack', '~> 2.0.1'
 gem 'rspec'
 
 
+
+
 #Custom gems
+
+gem 'json', '~> 1.8', '>= 1.8.3'
+
 gem 'activesupport', '~> 5.0', '>= 5.0.6'
 
 gem 'activeresource', require: 'active_resource'
 
 gem 'swagger_client', '~> 1.0.0'
 
-gem 'json', '~> 1.8.3'
-
+#gem 'json', '~> 2.1.0'
 #gem "swagger_client", path: "/swagger/"
 
 
