--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -17,7 +17,7 @@ services:
         volumes:
           - ../railsapp:/workspace
         stdin_open: true
-        tty: true
+        #tty: true
 
     gateway_timesheets-app:
         image: gateway_timesheets
